refactor: Major repo cleanup - consolidate diagrams, organize docs, move scripts - Remove large model files from tracking (.pth files) - Remove data files from tracking (CSV files) - Move diagrams to docs/architecture/ - Move scripts to scripts/ directory - Update .gitignore for better file exclusion

--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,11 @@ reports/
 py2txt/
 *.pdf
 
+# Model checkpoints - too large for git
+models/*.pth
+models/**/*.pth
+*.pth
+
 # IDEs
 .vscode/
 .idea/
